@@ -12,7 +12,6 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.io.Writer;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
@@ -42,18 +41,18 @@ public class FileReporter
             throws IOException {
         // Calculate a unique(?) file name.
         DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMdd'T'hhmmssSSS");
-        String filename = String.format("curation-%s.report", formatter.format(LocalDateTime.now(ZoneOffset.UTC)));
+        String filename = "curation-%s.report".formatted(formatter.format(LocalDateTime.now(ZoneOffset.UTC)));
 
         // Build a path to the directory which is to receive the file.
         ConfigurationService cfg = new DSpace().getConfigurationService();
         String reportDir = cfg.getProperty("report.dir");
         Path reportPath;
         if (null == reportDir) {
-            reportPath = Paths.get(cfg.getProperty("dspace.dir"),
+            reportPath = Path.of(cfg.getProperty("dspace.dir"),
                     "reports",
                     filename);
         } else {
-            reportPath = Paths.get(reportDir, filename);
+            reportPath = Path.of(reportDir, filename);
         }
 
         // Open the file.
